[package]
name = "crd-api"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.12"
quick-xml = { git = "https://github.com/tafia/quick-xml.git", rev = "40b1448", features = [
    "serialize",
] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.11"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
