[package]
name = "crd-api"
version = "0.2.1"
edition = "2021"
license = "MIT-0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
quick-xml = { version = "0.38", features = ["serialize"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_qs = "0.15"
thiserror = "2"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
